Fixed a sentence within the Features.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="giveaway-grid">
                     <div class="giveaway-card">
                         <h3>🎁 Helpful Support</h3>
-                        <p>Ready to help you with hosting a giveaway!</p>
+                        <p>Ready to help you host a giveaway!</p>
                         <span class="status active">Active Now</span>
                     </div>
                     <div class="giveaway-card">
@@ -84,3 +84,4 @@
     </footer>
 </body>
 </html>
+
