Updated the Hoster of the Month.

--- a/staff.html
+++ b/staff.html
@@ -90,7 +90,7 @@
                 <div class="staff-grid featured">
                     <div class="staff-card featured-card">
                         <div class="staff-avatar">⭐</div>
-                        <h3>None Yet!</h3>
+                        <h3>Luc!</h3>
                         <p class="staff-role">Hoster of the Month</p>
                         <p>Exceptional dedication to hosting amazing giveaways!</p>
                         <span class="badge">December 2025</span>
@@ -121,3 +121,4 @@
     </footer>
 </body>
 </html>
+
